<resources>
    <string name="app_name">Читалочка</string>
    <string name="epubactivity_set_bookmark">Добавить закладку</string>
    <string name="chapter_page">Страница %d</string>
    <string name="bookshelf_screen_title">Ваши книги</string>
    <string name="contents_tab_label">Содержание</string>
    <string name="bookmarks_tab_label">Закладки</string>
    <string name="bookshelf_is_empty">Ваша книжная полка пока пуста</string>
    <string name="unknown_author">Неизвестный автор</string>
    <string name="book_already_exist">Файл уже есть в библиотеке</string>
    <string name="file_not_created_error">Не удалось создать файл</string>
    <string name="publication_opening_error">Не удалось открыть публикацию</string>
    <string name="bookmarks_placeholder">Вы пока не добавили никаких закладок</string>
    <string name="contents_placeholder">В этой книге нет оглавления</string>
    <string name="system">Системный</string>
    <string name="parchment">Пергамент</string>
    <string name="mist">Туман</string>
    <string name="onyx">Оникс</string>
    <string name="twilight">Сумерки</string>
    <string name="moss">Лес</string>
    <string name="themes_title">Цвета текста и фона</string>
</resources>
