<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".reader.ReaderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/moss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/moss"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/app_bar"
                style="@style/ReaderToolbarStyle"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/navigate_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_ripple"
            android:elevation="8dp"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_ripple"
            android:elevation="8dp"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_format_list_bulleted_24"
            app:layout_constraintStart_toEndOf="@id/navigate_up"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bookmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_ripple"
            android:elevation="8dp"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_bookmarks_24"
            app:layout_constraintStart_toEndOf="@id/contents"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_ripple"
            android:elevation="8dp"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintStart_toEndOf="@id/bookmarks"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pages_count"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="bottom|center_horizontal"
            android:textColor="@color/secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <SeekBar
                android:id="@+id/bottom_bar_progress"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_gravity="top"
                android:progressBackgroundTint="@color/secondary"
                android:progressTint="@color/primary"
                android:thumbTint="@color/primary" />

            <TextView
                android:id="@+id/bottom_bar_pages_count"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_gravity="bottom|center_horizontal"
                android:textColor="@color/primary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:padding="16dp">

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:id="@+id/title"
            android:text="@string/themes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/primary"/>

        <!-- Первый ряд (верхний) -->
        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:id="@+id/primary"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/background"
            android:layout_marginTop="16dp"
            android:textColor="@color/primary"
            android:text="@string/system"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toStartOf="@id/parchment"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:id="@+id/parchment"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/parchment"
            android:textColor="@android:color/black"
            android:text="@string/parchment"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/primary"
            app:layout_constraintTop_toTopOf="@id/primary"
            app:layout_constraintEnd_toStartOf="@id/mist"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:id="@+id/mist"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/mist"
            android:textColor="@android:color/black"
            android:text="@string/mist"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/parchment"
            app:layout_constraintTop_toTopOf="@id/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:id="@+id/onyx"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/onyx"
            android:textColor="@android:color/white"
            android:text="@string/onyx"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primary"
            app:layout_constraintEnd_toStartOf="@id/twilight"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:id="@+id/twilight"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/twilight"
            android:textColor="@android:color/white"
            android:text="@string/twilight"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/onyx"
            app:layout_constraintTop_toBottomOf="@id/parchment"
            app:layout_constraintEnd_toStartOf="@id/moss"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:id="@+id/moss"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/moss"
            android:textColor="@android:color/white"
            android:text="@string/moss"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/twilight"
            app:layout_constraintTop_toBottomOf="@+id/mist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
